setup project files part 1

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "chai"
   ],
   "author": "Saurabh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
