--- a/package.json
+++ b/package.json
@@ -3,18 +3,15 @@
   "version": "1.0.0",
   "description": "a backend project ",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ "scripts": {
+  "dev": "nodemon -r dotenv/config src/index.js"
+},
+
   "keywords": [
     "backend",
     "javasciprt",
     "chai"
   ],
   "author": "Saurabh",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.1.10",
-    "prettier": "^3.6.2"
-  }
+  "license": "ISC"
 }
