--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "accepts": "^2.0.0",
     "anymatch": "^3.1.3",
     "balanced-match": "^1.0.2",
+    "bcrypt": "^6.0.0",
     "binary-extensions": "^2.3.0",
     "body-parser": "^2.2.0",
     "brace-expansion": "^1.1.12",
@@ -58,6 +59,7 @@
     "is-glob": "^4.0.3",
     "is-number": "^7.0.0",
     "is-promise": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
     "kareem": "^2.6.3",
     "math-intrinsics": "^1.1.0",
     "media-typer": "^1.1.0",
@@ -69,6 +71,7 @@
     "mongodb": "^6.18.0",
     "mongodb-connection-string-url": "^3.0.2",
     "mongoose": "^8.18.0",
+    "mongoose-aggregate-paginate-v2": "^1.1.4",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.1.3",
