--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "call-bind-apply-helpers": "^1.0.2",
     "call-bound": "^1.0.4",
     "chokidar": "^3.6.0",
+    "cloudinary": "^2.7.0",
     "concat-map": "^0.0.1",
     "content-disposition": "^1.0.0",
     "content-type": "^1.0.5",
@@ -75,6 +76,7 @@
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.1.3",
+    "multer": "^2.0.2",
     "negotiator": "^1.0.0",
     "nodemon": "^3.1.10",
     "normalize-path": "^3.0.0",
